<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvEnd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/game_over"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvEnd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEnd1"
        android:layout_centerHorizontal="true"
        android:text="@string/your_score"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEnd2"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="50sp" />
    
     <TextView
         android:id="@+id/tvBestScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvScore"
         android:layout_centerHorizontal="true"
         android:text="@string/best_score"
         android:textSize="30sp" />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBestScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/restart_in_finish"
        android:textSize="30sp" />

    <Button
        android:id="@+id/to_Main_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/to_main_menu_in_finish"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvYourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_Main_Menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/your_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/toChangeName"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvYourName"
        android:text="@string/change_name" />

    <Button
        android:id="@+id/toShowRecords"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toChangeName"
        android:layout_alignBottom="@+id/toChangeName"
        android:layout_alignParentLeft="true"
        android:text="@string/show_records" />

</RelativeLayout>