<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/menu_in_choose_mode"
        android:textColor="#0000FF"
        android:textSize="40sp" />

    <Button
        android:id="@+id/to_simple_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewChoose"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/clear_background"
        android:text="@string/menu_simple_mode"
        android:textColor="@color/text_color"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/to_color_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_simple_mode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/clear_background"
        android:text="@string/menu_color_mode"
        android:textColor="@color/text_color"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/to_calculator_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_color_mode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/clear_background"
        android:text="@string/menu_calculator_mode"
        android:textColor="@color/text_color"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/to_memory_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_calculator_mode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/clear_background"
        android:text="@string/menu_memory_mode"
        android:textColor="@color/text_color"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/to_hardcore_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_memory_mode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/clear_background"
        android:text="@string/menu_hardcore_mode"
        android:textColor="@color/text_color"
        android:textSize="30sp" />
    

    <Button
        android:id="@+id/to_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/back_button"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="30sp" />

</RelativeLayout>